Integrate The API & Add CEO section

--- a/src/app/Features/home/Components/home/home.html
+++ b/src/app/Features/home/Components/home/home.html
@@ -14,6 +14,10 @@
     <app-about></app-about>
 </div>
 
+<div id="ceo">
+    <app-ceo></app-ceo>
+</div>
+
 <div id="contact" style="background-color: rgb(45, 20, 135); width: 50vh; height: 50vh;">
     <app-contact></app-contact>
 </div>
