Add Constants & Serving Sectors

--- a/src/app/Features/home/Components/home/home.html
+++ b/src/app/Features/home/Components/home/home.html
@@ -18,12 +18,14 @@
   <app-about></app-about>
 </div>
 
+<app-serving-sectors></app-serving-sectors>
+
 <div id="ceo">
   <app-ceo></app-ceo>
 </div>
 
-<div id="contact" style="background-color: rgb(45, 20, 135); width: 50vh; height: 50vh;">
-  <!-- <app-contact></app-contact> -->
+<div id="contact" >
+  <app-contact></app-contact>
 </div>
 
 <app-footer></app-footer>
