--- a/src/app/Features/home/Components/serving-sectors/serving-sectors.css
+++ b/src/app/Features/home/Components/serving-sectors/serving-sectors.css
@@ -18,7 +18,7 @@ p.subtitle {
     font-size: 1em;
     margin-bottom: 30px;
 }
-.value-card {
+.sector-card {
     background-color: #e6ecef;
     border-radius: 15px;
     padding: 30px;
@@ -32,17 +32,17 @@ p.subtitle {
     margin-bottom: 1.5rem;
     height: 35vh;
 }
-.value-card:hover{
+.sector-card:hover{
     transform: translateY(-10px) scale(1.02);
 }
 
-.value-card h3 {
+.sector-card h3 {
     color: #1a3c5e;
     font-size: 1.2em;
     margin-bottom: 10px;
     font-weight: bold;
 }
-.value-card p {
+.sector-card p {
     color: #1a3c5e;
     font-size: 0.9em;
     line-height: 1.5;
@@ -59,5 +59,39 @@ svg{
     stroke: white;
     fill: white;
     width: 2rem;
+}
+
+.join-contact {
+    background-color: white;
+    border-radius: 15px;
+    padding: 30px;
+    text-align: center;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    margin: 2rem auto;
+    width: 70%;
+}
+.join-contact h2 {
+    color: #1a3c5e;
+    font-size: 2rem;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.join-contact p {
+    color: #1a3c5e;
+    font-size: 1em;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+.join-contact .btn {
+    background: var(--basic-gradient);
+    color: white;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
 }
 
