--- a/src/app/Features/home/Components/home/home.html
+++ b/src/app/Features/home/Components/home/home.html
@@ -10,8 +10,8 @@
   <app-news></app-news>
 </div>
 
-<div id="products" style="background-color: rgb(162, 248, 133); width: 50vh; height: 50vh;">
-  <!-- <app-products></app-products> -->
+<div id="products">
+  <app-products></app-products>
 </div>
 
 <div id="about">
