Resolve Dynamic Data

--- a/src/app/Features/home/Components/clients/clients.html
+++ b/src/app/Features/home/Components/clients/clients.html
@@ -1,8 +1,8 @@
 <div class="container my-5">
-  <h2 class="text-center mb-4">Our Clients</h2>
-  <p>We are proud of the trust of our clients from various sectors in the Kingdom of Saudi Arabia</p>
+  <h2 class="text-center mb-4">{{getClientsTitle()}}</h2>
+  <p>{{getClientsDescription()}}</p>
   <div class="more-div">
-    <span>More than 500 clients trust us throughout the Kingdom</span>
+    <span>{{getClientsMessage()}}</span>
   </div>
   <div id="clientsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner mx-auto">
