--- a/src/app/Features/home/Components/home/home.html
+++ b/src/app/Features/home/Components/home/home.html
@@ -18,7 +18,10 @@
   <app-about></app-about>
 </div>
 
-<app-clients></app-clients>
+<div id="clients">
+  <app-clients></app-clients>
+</div>
+
 
 <app-serving-sectors></app-serving-sectors>
 
