--- a/src/app/Shared/footer/footer.css
+++ b/src/app/Shared/footer/footer.css
@@ -2,7 +2,6 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f8f9fa;
     padding: 0;
-    /* margin-top: 30px; */
     display: flex;
     flex-direction: column;
 }
@@ -26,9 +25,9 @@ body {
 .footer-title::after {
     content: '';
     position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 50px;
+    inset-inline-start: 0;
+    bottom: -5px;
+    width: 70px;
     height: 3px;
     background: var(--secondary-color);
 }
@@ -53,7 +52,7 @@ body {
     border-radius: 4px;
     margin-bottom: 1rem;
     font-weight: 600;
-    border-left: 3px solid var(--secondary-color);
+    border-inline-start: 3px solid var(--secondary-color);
 }
 
 .footer-links {
@@ -101,7 +100,6 @@ body {
     font-size: 1.2rem;
 
 }
-
 
 .social-icons {
     display: flex;
